# Medical-Care-Robot-Coordination-System

./: .gitignore  DESIGN.md  docker-compose.yml  readme.md  start-docker.bat  start-docker.ps1  start-local.ps1  stop-docker.bat  stop-docker.ps1  stop-local.ps1  testfile.cpp
COMP_2432project/: .gitignore  Cargo.toml  Dockerfile  test_input
COMP_2432project/src/: api.rs  lib.rs  main.rs  prelude.rs  test_rust.rs
COMP_2432project/src/coordinator/: builder.rs  lifecycle.rs  mod.rs  syscall.rs  task_table.rs
COMP_2432project/src/mm/: allocation_table.rs  deadlock_detector.rs  lock_guard.rs  mod.rs  zone_allocator.rs
COMP_2432project/src/monitor/: health_checker.rs  heartbeat.rs  metrics.rs  mod.rs  monitor_thread.rs  reporter.rs
COMP_2432project/src/scheduler/: fifo.rs  mod.rs  priority.rs  queue.rs  round_robin.rs  srt.rs  stats.rs  thread_safe_queue.rs  work_stealing.rs
COMP_2432project/src/sync/: atomic.rs  barrier.rs  channel.rs  mod.rs  mutex.rs  rwlock.rs
COMP_2432project/src/task_process_control_block/: Process management cache.cpp  Process_management_cache.cpp
COMP_2432project/src/types/: config.rs  error.rs  mod.rs  robot.rs  task.rs  zone.rs
COMP_2432project/src/util/: id_generator.rs  logger.rs  mod.rs  rand.rs  timer.rs
COMP_2432project/src/worker/: lifecycle.rs  mod.rs  pool.rs  robot.rs  state.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.ts  style.css  types.ts
